[package]
name = "vfind"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vfind"
crate-type = ["cdylib"]

[dependencies]
flate2 = "1.1.0"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.26"
memchr = "2.7.4"
parasail-rs = "0.7.7"
polars = "0.46.0"
pyo3 = "0.23.4"
pyo3-polars = "0.20.0"
seq_io = "0.3.3"
