[package]
name = "vfind"
version = "0.3.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "vfind"
crate-type = ["cdylib"]

[dependencies]
binseq = "0.6.4"
flate2 = "1.1.1"
indicatif = { version = "0.17.11", features = ["rayon"] }
log = "0.4.27"
memchr = "2.7.4"
parasail-rs = "0.7.8"
polars = "0.48.1"
pyo3-polars = { version = "0.21.0", default-features = false }
pyo3 = { version = "0.24.2", features = ["extension-module"] }
seq_io = "0.3.4"
