[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "vfind"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "polars"
]
authors = [
    {name = "nsbuitrago", email = "44626938+nsbuitrago@users.noreply.github.com"}
]
description = "A simple variant finder for NGS data"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "sequence analysis", "NGS", "variant finding"]

[project.urls]
Repository = "https://github.com/nsbuitrago/vfind"
Issues = "https://github.com/nsbuitrago/vfind/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
