[project]
name = "vfind"
version = "0.1.0"
description = "A simple variant finder for NGS data"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
{name = "Nicolas Buitrago", email = "44626938+nsbuitrago@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bioinformatics"
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module
# (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.8.1",
    "mkdocs-material>=9.5.49",
    "polars>=1.19.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
]

