[project]
name = "vfind"
dynamic = ["version"]
description = "Simple variant finding utilities for NGS data"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["bioinformatics", "sequence analysis", "NGS", "variant finding"]
authors = [
    { name = "nsbuitrago", email = "mail@nsbuitrago.xyz" }
]
requires-python = ">=3.10"
dependencies = [
    "polars>=1.23.0",
]

[project.urls]
Repository = "https://github.com/nsbuitrago/vfind"
Issues = "https://github.com/nsbuitrago/vfind/issues"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.8.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
]
